--- a/project_proposal_imt575_Aviral_Felix_Silvano_Wesley.ipynb
+++ b/project_proposal_imt575_Aviral_Felix_Silvano_Wesley.ipynb
@@ -156,8 +156,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "imt575",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
