--- a/embedding_stuff/embedding_implement.ipynb
+++ b/embedding_stuff/embedding_implement.ipynb
@@ -11,13 +11,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -31,7 +24,20 @@
     "# sklearn libraries\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import classification_report\n"
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "# deep learning models\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "import torch, torchvision\n",
+    "import torch.nn.functional as F\n",
+    "from torchvision import transforms, datasets\n",
+    "\n",
+    "import umap\n",
+    "from tqdm import tqdm\n",
+    "from transformers import pipeline # hugging face's library for \n",
+    "from transformers import AutoTokenizer, AutoModelForMaskedLM"
    ]
   },
   {
@@ -40,139 +46,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# deep learning models\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "import torch, torchvision\n",
-    "import torch.nn.functional as F\n",
-    "from torchvision import transforms, datasets\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "import umap\n",
-    "from tqdm import tqdm\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "from transformers import pipeline # hugging face's library for \n",
-    "from transformers import AutoTokenizer, AutoModelForMaskedLM"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# import word2vec embedding tool\n",
     "import gensim.downloader as api\n",
-    "\n",
     "google_news_vectors = api.load(\"word2vec-google-news-300\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "662942e99e5b49258819f5b9225c2a43",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json:   0%|          | 0.00/466 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1480ac049bbd4e339d143c5b2481d369",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "pytorch_model.bin:   0%|          | 0.00/542M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "931cd9df34e742c9bd253dd7a571c1bb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/62.0 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d1f9aaf75ac44326b8de07e7a0522996",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "vocab.txt:   0%|          | 0.00/996k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "81b97bca7bb246768959a2343fb2ad7f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors:   0%|          | 0.00/542M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e150fcf301004b019a99d58797b32d84",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "special_tokens_map.json:   0%|          | 0.00/112 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -185,15 +68,13 @@
     "# Load model directly\n",
     "# Use a pipeline as a high-level helper\n",
     "pipe = pipeline(\"fill-mask\", model=\"medicalai/ClinicalBERT\") \n",
-    "\n",
-    "\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"medicalai/ClinicalBERT\")\n",
     "model = AutoModelForMaskedLM.from_pretrained(\"medicalai/ClinicalBERT\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +87,6 @@
    ],
    "source": [
     "# see what it looks like\n",
-    "\n",
     "text = \"The patient presented with chest pain and shortness of breath.\"\n",
     "encoded_input = tokenizer(\n",
     "    text,\n",
@@ -218,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,8 +139,78 @@
     "         \n",
     "\n",
     "        # 'embeddings' have the shape (batch_size, sequence_length, hidden_size)\n",
-    "        return embedding\n",
-    "\n"
+    "        return embedding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Distance Function\n",
+    "import numpy as np\n",
+    "from scipy.stats import ttest_ind\n",
+    "\n",
+    "def calculate_distance_metrics(group1, group2):\n",
+    "    \"\"\"\n",
+    "    Calculate Cohen's D, effect size, and t-test p-value between two sets of embeddings.\n",
+    "\n",
+    "    Args:\n",
+    "        group1 (np.ndarray): Embedding vectors for group 1, shape (n_samples, embedding_dim)\n",
+    "        group2 (np.ndarray): Embedding vectors for group 2, shape (n_samples, embedding_dim)\n",
+    "\n",
+    "    Returns:\n",
+    "        dict: {\n",
+    "            \"cohens_d\": float,\n",
+    "            \"effect_size\": str,\n",
+    "            \"p_value\": float\n",
+    "        }\n",
+    "    \"\"\"\n",
+    "    # Ensure inputs are numpy arrays\n",
+    "    group1 = np.array(group1)\n",
+    "    group2 = np.array(group2)\n",
+    "\n",
+    "    # Compute the mean vector for each group\n",
+    "    group1_mean = group1.mean(axis=0)\n",
+    "    group2_mean = group2.mean(axis=0)\n",
+    "\n",
+    "    # Compute the pooled standard deviation\n",
+    "    pooled_std = np.sqrt(((group1.std(axis=0, ddof=1) ** 2) + (group2.std(axis=0, ddof=1) ** 2)) / 2)\n",
+    "\n",
+    "    # Compute Cohen's D for each dimension and average it\n",
+    "    cohens_d_vector = (group1_mean - group2_mean) / pooled_std\n",
+    "    cohens_d = np.mean(cohens_d_vector)\n",
+    "\n",
+    "    # Interpret effect size\n",
+    "    if abs(cohens_d) < 0.2:\n",
+    "        effect = \"small\"\n",
+    "    elif abs(cohens_d) < 0.5:\n",
+    "        effect = \"medium\"\n",
+    "    else:\n",
+    "        effect = \"large\"\n",
+    "\n",
+    "    # Compute t-test\n",
+    "    t_stat, p_val = ttest_ind(group1, group2, equal_var=False)\n",
+    "\n",
+    "    return {\n",
+    "        \"cohens_d\": cohens_d,\n",
+    "        \"effect_size\": effect,\n",
+    "        \"p_value\": float(np.mean(p_val))  # average across dimensions\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedding_group_1 = [EmbedMedical.get_medical_embeddings(txt) for txt in texts_group_1]\n",
+    "embedding_group_2 = [EmbedMedical.get_medical_embeddings(txt) for txt in texts_group_2]\n",
+    "\n",
+    "result = calculate_distance_metrics(embedding_group_1, embedding_group_2)\n",
+    "print(result)\n"
    ]
   },
   {
@@ -269,10 +219,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedding1 = EmbedMedical.get_medical_embeddings(\"You should rest for 5 days and call us back if you have any concerns or things worsen.\")\n",
-    "embedding2 = EmbedMedical.get_medical_embeddings(\"You should rest for 5 dahave any concerns or things worsen.\")\n",
+    "# embedding1 = EmbedMedical.get_medical_embeddings(\"You should rest for 5 days and call us back if you have any concerns or things worsen.\")\n",
+    "# embedding2 = EmbedMedical.get_medical_embeddings(\"You should rest for 5 dahave any concerns or things worsen.\")\n",
     "\n",
-    "distance = fucntion(embedding1, embedding2)"
+    "# distance = function(embedding1, embedding2)"
    ]
   },
   {
@@ -698,7 +648,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "imt575",
+   "display_name": "MachineLearning",
    "language": "python",
    "name": "python3"
   },
@@ -712,7 +662,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
