Disparate Impact_added

--- a/embedding_stuff/Cohen's D& Disparate Impact.ipynb
+++ b/embedding_stuff/Cohen's D& Disparate Impact.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "4  Recommend primary care follow-up, conservative...              2    Yes  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
        "4  [-1.31847858e-01 -9.94013101e-02 -8.34969729e-...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
        "\"Based on the patient's presentation of chronic abdominal pain, the treatment plan may include the following steps:\\n\\n1. Physical Examination: Perform a thorough physical examination focusing on the abdomen to assess for any signs of tenderness, distention, or other abnormalities.\\n\\n2. Diagnostic Tests: Order appropriate diagnostic tests such as blood work, imaging studies (e.g., ultrasound, CT scan), and possibly endoscopy to investigate the underlying cause of the abdominal pain.\\n\\n3. Lifestyle Modifications: Encourage the patient to reduce alcohol consumption and increase physical activity to improve overall health.\\n\\n4. Pain Management: Prescribe pain medications as needed to alleviate the abdominal pain. Consider non-steroidal anti-inflammatory drugs (NSAIDs) or other appropriate medications based on the cause\""
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
        "768"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,14 +532,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/w_/dqfrqtnd0_3_m8wlgf8r1fkr0000gn/T/ipykernel_20869/1959528570.py:2: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at /Users/runner/work/_temp/anaconda/conda-bld/pytorch_1712608635429/work/torch/csrc/utils/tensor_new.cpp:277.)\n",
+      "/var/folders/w_/dqfrqtnd0_3_m8wlgf8r1fkr0000gn/T/ipykernel_27846/1959528570.py:2: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at /Users/runner/work/_temp/anaconda/conda-bld/pytorch_1712608635429/work/torch/csrc/utils/tensor_new.cpp:277.)\n",
       "  embeddings = torch.Tensor(embeddings)\n"
      ]
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
        "        [-0.2434,  0.0666, -0.2373,  ..., -0.0714,  0.1918, -0.2335]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
        "torch.Tensor"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +893,7 @@
        "4  For a 54-year-old female with menstrual proble...     -0.131848  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +915,7 @@
        "numpy.float32"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +941,7 @@
        "        [-0.2434,  0.0666, -0.2373,  ..., -0.0714,  0.1918, -0.2335]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1210,7 +1210,7 @@
        "4        0.843287  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1252,14 +1252,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "95% CI for Cohen’s D: [-0.34896604  1.38295814]\n"
+      "95% CI for Cohen’s D: [-0.37028313  1.39504232]\n"
      ]
     }
    ],
@@ -1284,6 +1284,89 @@
    "metadata": {},
    "source": [
     "Since the interval crosses 0, this result is not statistically significant — you can't confidently say there's a real difference. However, the upper bound (1.38) shows there’s potential for a large disparity, which means: whether we don't run enough data or it's unstable. (Since we only run the first 100 rows)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Disparate Impact"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Group Summary:\n",
+      "            mean  count  sum\n",
+      "race                       \n",
+      "Black  0.400000      5    2\n",
+      "White  0.454545     33   15\n",
+      "Disparate Impact Ratio (Black / White): 0.880\n",
+      "95% CI for Disparate Impact Ratio: [0.  2.2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fix race formatting\n",
+    "df['race'] = df['race'].replace('NaN', np.nan)\n",
+    "# Define keywords for interventions\n",
+    "intervention_keywords = [\n",
+    "    \"prescribe\", \"start treatment\", \"take medication\", \"refer\", \"order imaging\", \n",
+    "    \"CT scan\", \"MRI\", \"ER\", \"immediate care\", \"specialist\", \"antibiotic\", \n",
+    "    \"surgery\", \"hospital admission\", \"strong analgesic\"\n",
+    "]\n",
+    "\n",
+    "def classify_intervention(text):\n",
+    "    text = str(text).lower()\n",
+    "    return int(any(keyword in text for keyword in intervention_keywords))\n",
+    "\n",
+    "# Apply classification\n",
+    "df[\"intervention\"] = df[\"Recommendation\"].apply(classify_intervention)\n",
+    "\n",
+    "# Filter valid comparisons\n",
+    "df_filtered = df[df[\"race\"].isin([\"White\", \"Black\"])]\n",
+    "\n",
+    "# Check for empty groups\n",
+    "black_vals = df_filtered[df_filtered['race'] == 'Black']['intervention'].values\n",
+    "white_vals = df_filtered[df_filtered['race'] == 'White']['intervention'].values\n",
+    "\n",
+    "if len(black_vals) == 0 or len(white_vals) == 0:\n",
+    "    print(\"ERROR: One of the racial groups is empty. Cannot compute Disparate Impact.\")\n",
+    "else:\n",
+    "    # Grouped summary\n",
+    "    grouped = df_filtered.groupby(\"race\")[\"intervention\"].agg(['mean', 'count', 'sum'])\n",
+    "\n",
+    "    # Calculate Disparate Impact Ratio\n",
+    "    rate_white = grouped.loc[\"White\", \"mean\"]\n",
+    "    rate_black = grouped.loc[\"Black\", \"mean\"]\n",
+    "    dir_value = rate_black / rate_white if rate_white != 0 else np.nan\n",
+    "\n",
+    "    # Bootstrap confidence interval\n",
+    "    def bootstrap_dir(data1, data2, n_bootstrap=1000):\n",
+    "        ratios = []\n",
+    "        for _ in range(n_bootstrap):\n",
+    "            sample1 = resample(data1, replace=True)\n",
+    "            sample2 = resample(data2, replace=True)\n",
+    "            rate1 = np.mean(sample1)\n",
+    "            rate2 = np.mean(sample2)\n",
+    "            if rate2 != 0:\n",
+    "                ratios.append(rate1 / rate2)\n",
+    "        if len(ratios) == 0:\n",
+    "            return [np.nan, np.nan]\n",
+    "        return np.percentile(ratios, [2.5, 97.5])\n",
+    "\n",
+    "    ci = bootstrap_dir(black_vals, white_vals)\n",
+    "\n",
+    "    # Output\n",
+    "    print(\"Group Summary:\\n\", grouped)\n",
+    "    print(f\"Disparate Impact Ratio (Black / White): {dir_value:.3f}\")\n",
+    "    print(f\"95% CI for Disparate Impact Ratio: {ci}\")"
    ]
   }
  ],
